--- a/tests/integration/integration_config.yml.template
+++ b/tests/integration/integration_config.yml.template
@@ -48,10 +48,12 @@ sc_config:
       auth_user: ""
       auth_password: ""
     oidc:
-      uuid: oidcconfig_uuid
-      client_id: "d2298ec0-0596-49d2-9554-840a2fe20603"
-      shared_secret: "~0lI5n-_8dNbWmrrqqTE1v1iBcfO4__jfx"
-      config_url: https://login.microsoftonline.com/76d4c62a-a9ca-4dc2-9187-e2cc4d9abe7f/v2.0/.well-known/openid-configuration
+      client_id_default: <default value>
+      shared_secret_default: <default value>
+      config_url_default: <default value>
       scopes: "openid+profile"
+      client_id_test: <test value>
+      shared_secret_test: <test value>
+      config_url_test: <test value>
     email_alert:
       - someone@scalecomputing.com
