--- a/tests/integration/targets/oidc_config/tasks/main.yml
+++ b/tests/integration/targets/oidc_config/tasks/main.yml
@@ -7,6 +7,8 @@
 
   block:
     - include_tasks: oidc_config.yml
+      vars:
+        oidc_config: "{{ sc_config[sc_host].oidc }}"
   always:
     - include_tasks: oidc_reset.yml
       vars:
