--- a/tests/integration/targets/oidc_config/tasks/oidc_config.yml
+++ b/tests/integration/targets/oidc_config/tasks/oidc_config.yml
@@ -3,17 +3,17 @@
 
 - name: Create or update OIDC config (different App - "Scale-test-xlab" in AzureAD)
   scale_computing.hypercore.oidc_config:
-    client_id: "59a6f398-f0c0-405c-a315-08decbe77124"
-    shared_secret: "Fx_8Q~hmbH8Shr3BzfcxZfjlSNbtxTpb23NiqbwU"
-    config_url: "https://login.microsoftonline.com/76d4c62a-a9ca-4dc2-9187-e2cc4d9abe7f/v2.0/.well-known/openid-configuration"
+    client_id: "{{ oidc_config.client_id_test }}"
+    shared_secret: "{{ oidc_config.shared_secret_test }}"
+    config_url: "{{ oidc_config.config_url_test }}"
     scopes: "openid+profile"
-  register: oidc_config
+  register: oidc_config_set
 - ansible.builtin.assert:
     that:
       - oidc_config is succeeded
       - oidc_config is changed
-      - oidc_config.record.client_id == "59a6f398-f0c0-405c-a315-08decbe77124"
-      - oidc_config.record.config_url == "https://login.microsoftonline.com/76d4c62a-a9ca-4dc2-9187-e2cc4d9abe7f/v2.0/.well-known/openid-configuration"
+      - oidc_config.record.client_id == "{{ oidc_config.client_id_test }}"
+      - oidc_config.record.config_url == "{{ oidc_config.config_url_test }}"
       - oidc_config.record.scopes == "openid+profile"
 
 - name: Read OIDC config - make sure it is updated
@@ -23,6 +23,6 @@
     that:
       - oidc_config_info_data is succeeded
       - oidc_config_info_data is not changed
-      - oidc_config_info_data.record.client_id == "59a6f398-f0c0-405c-a315-08decbe77124"
-      - oidc_config_info_data.record.config_url == "https://login.microsoftonline.com/76d4c62a-a9ca-4dc2-9187-e2cc4d9abe7f/v2.0/.well-known/openid-configuration"
+      - oidc_config_info_data.record.client_id == "{{ oidc_config.client_id_test }}"
+      - oidc_config_info_data.record.config_url == "{{ oidc_config.config_url_test }}"
       - oidc_config_info_data.record.scopes == "openid+profile"
