--- a/tests/integration/integration_config.yml.template
+++ b/tests/integration/integration_config.yml.template
@@ -32,6 +32,8 @@ sc_config:
       contact: <firstname secondname>
       email: someone@scalecomputing.com
       phone: "123 456 7890"
+    cluster_shutdown:
+      magic_allow_string: "oh-no-no"  # use "allow-cluster-shutdown-test" to allow this integration test
   <sc_host>:
     <<: *base_cfg
     cluster:
