--- a/tests/integration/targets/cluster_shutdown/tasks/main.yml
+++ b/tests/integration/targets/cluster_shutdown/tasks/main.yml
@@ -4,8 +4,15 @@
     SC_USERNAME: "{{ sc_username }}"
     SC_PASSWORD: "{{ sc_password }}"
     SC_TIMEOUT: "{{ sc_timeout }}"
+  vars:
+    cluster_shutdown_config: "{{ sc_config[sc_host].cluster_shutdown }}"
 
   block:
+    - name: Fail test early if shutdown is not allowed
+      ansible.builtin.assert:
+        that:
+          - cluster_shutdown_config.magic_allow_string == "allow-cluster-shutdown-test"
+
     - name: Test connect to SC_HOST API url - before
       ansible.builtin.uri:
         url: "{{ sc_host }}"
@@ -16,6 +23,7 @@
       scale_computing.hypercore.cluster_shutdown:
         force_shutdown: false
       register: cluster_shutdown_result
+      when: cluster_shutdown_config.magic_allow_string == "allow-cluster-shutdown-test"
 
     - name: Check cluster_shutdown_result
       ansible.builtin.assert:
