vm module should find VM by new or old name
But now _set_disks() still searches only for old name.
Likely this should be solved by _set_disks not searching for VM at all -
we already found vm_before.
_set_vm_params() already works this way - it has vm param.

Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/targets/vm/tasks/03_rename.yml
+++ b/tests/integration/targets/vm/tasks/03_rename.yml
@@ -70,7 +70,7 @@
         memory: "{{ '512 MB' | human_to_bytes }}"
         vcpu: 1
         # attach_guest_tools_iso: false
-        # power_state: stop
+        power_state: stop
         disks: []
         nics: []
         # boot_devices: []
@@ -107,7 +107,7 @@
         memory: "{{ '512 MB' | human_to_bytes }}"
         vcpu: 1
         # attach_guest_tools_iso: false
-        # power_state: stop
+        power_state: stop
         disks: []
         nics: []
         # boot_devices: []
