--- a/examples/syslog_server_list.yml
+++ b/examples/syslog_server_list.yml
@@ -1,30 +1,35 @@
 ---
-# ------------- Module syslog_server
-- name: Create Syslog server
-  scale_computing.hypercore.syslog_server:
-    host: 10.5.11.222 # [ REQUIRED ]
-    port: 514 # [ OPTIONAL ]
-    protocol: udp # tcp --> [ OPTIONAL ]
-    state: present # absent --> create, delete [ REQUIRED ]
+- name: Create, Update, Delete and list Syslog servers
+  hosts: localhost
+  connection: local
+  gather_facts: false
 
-- name: Update existing Syslog server
-  scale_computing.hypercore.syslog_server:
-    host: 10.5.11.222 # [ REQUIRED ]
-    host_new: 1.2.3.4 # host IP to update the existing one with [ OPTIONAL ] -> if not specified, CREATE will be made.
-    port: 514 # can also be different than the existing  [ OPTIONAL ]
-    protocol: udp # can also be different than the existing  [ OPTIONAL ]
-    state: present # absent --> create, delete [ REQUIRED ]
+  tasks:
+    - name: Create Syslog server
+      scale_computing.hypercore.syslog_server:
+        host: 10.5.11.222 # [ REQUIRED ]
+        port: 514 # [ OPTIONAL ]
+        protocol: udp # tcp --> [ OPTIONAL ]
+        state: present # absent --> create, delete [ REQUIRED ]
 
-# When deleting, only "host" param is required.
-# Deleting by "host".
-- name: Delete Syslog server
-  scale_computing.hypercore.syslog_server:
-    host: 10.5.11.222 # [ REQUIRED ]
-    state: absent
+    - name: Update existing Syslog server
+      scale_computing.hypercore.syslog_server:
+        host: 10.5.11.222 # [ REQUIRED ]
+        host_new: 1.2.3.4 # host IP to update the existing one with [ OPTIONAL ] -> if not specified, CREATE will be made.
+        port: 514 # can also be different than the existing  [ OPTIONAL ]
+        protocol: udp # can also be different than the existing  [ OPTIONAL ]
+        state: present # absent --> create, delete [ REQUIRED ]
 
-# ------------- Module syslog_server_list_info
-- name: List all Syslog servers
-  scale_computing.hypercore.syslog_server_info:
-  register: syslog_info_records
-- ansible.builtin.debug:
-    msg: "{{ syslog_info_records }}"
+    # When deleting, only "host" param is required.
+    # Deleting by "host".
+    - name: Delete Syslog server
+      scale_computing.hypercore.syslog_server:
+        host: 10.5.11.222 # [ REQUIRED ]
+        state: absent
+
+    # ------------- Module syslog_server_list_info
+    - name: List all Syslog servers
+      scale_computing.hypercore.syslog_server_info:
+      register: syslog_info_records
+    - ansible.builtin.debug:
+        msg: "{{ syslog_info_records }}"
