Replace rescue with always

--- a/tests/integration/targets/cluster_name/tasks/main.yml
+++ b/tests/integration/targets/cluster_name/tasks/main.yml
@@ -23,7 +23,7 @@
           - cluster.record.name == "name_updated"
           - cluster.diff.before.name == cluster_initial.record.name
           - cluster.diff.after.name == "name_updated"
-      register: cluster # to catch assertion error msg for rescue
+      register: cluster # to catch assertion msg for always
     
     - name: Check if cluster name is updated
       scale_computing.hypercore.cluster_info:
@@ -31,7 +31,7 @@
     - ansible.builtin.assert:
         that:
           - cluster.record.name == "name_updated"
-      register: cluster # to catch assertion error msg for rescue
+      register: cluster # to catch assertion msg for always
     
     - name: Update cluster name - idempotence
       scale_computing.hypercore.cluster_name:
@@ -44,7 +44,7 @@
           - cluster.record.name == "name_updated"
           - cluster.diff.before.name == "name_updated"
           - cluster.diff.after.name == "name_updated"
-      register: cluster # to catch assertion error msg for rescue
+      register: cluster # to catch assertion msg for always
     
     - name: Retrieve cluster name
       scale_computing.hypercore.cluster_info:
@@ -52,7 +52,7 @@
     - ansible.builtin.assert:
         that:
           - cluster.record.name == "name_updated"
-      register: cluster # to catch assertion error msg for rescue
+      register: cluster # to catch assertion msg for always
     
     - name: Set back the initial cluster name
       scale_computing.hypercore.cluster_name:
@@ -65,7 +65,7 @@
           - cluster.record.name == cluster_initial.record.name
           - cluster.diff.before.name == "name_updated"
           - cluster.diff.after.name == cluster_initial.record.name
-      register: cluster # to catch assertion error msg for rescue
+      register: cluster # to catch assertion msg for always
     
     - name: Check if cluster name is updated
       scale_computing.hypercore.cluster_info:
@@ -73,9 +73,9 @@
     - ansible.builtin.assert:
         that:
           - cluster.record.name == cluster_initial.record.name
-      register: cluster # to catch assertion error msg for rescue
+      register: cluster # to catch assertion msg for always
 
-  rescue:
+  always:
     - name: Set back the initial cluster_name
       scale_computing.hypercore.api:
         action: patch
