--- a/tests/integration/targets/syslog_server/tasks/main.yml
+++ b/tests/integration/targets/syslog_server/tasks/main.yml
@@ -3,27 +3,14 @@
     SC_HOST: "{{ sc_host }}"
     SC_USERNAME: "{{ sc_username }}"
     SC_PASSWORD: "{{ sc_password }}"
-
   vars:
-    default_port: 514
-    tcp_protocol: SYSLOG_PROTOCOL_TCP
-    udp_protocol: SYSLOG_PROTOCOL_UDP
-    create_syserver:
-      host: 0.0.0.0
-      port: 42
-      protocol: tcp
-    new_host: 1.2.3.4
+    syslog_server_config: "{{ sc_config[sc_host].syslog_server }}"
 
   block:
-    - name: Get starting hosts
-      scale_computing.hypercore.syslog_server_info:
-      register: info
-    - ansible.builtin.set_fact:
-        starting_servers: "{{ info.records }}"
-
-    # -----------------------------------------------------------
-
-    - name: Get current email_alert
+    - include_tasks: 01_syslog_server_info.yml
+    - include_tasks: 02_syslog_server.yml
+  always:
+    - name: Get current syslog_server
       scale_computing.hypercore.api:
         action: get
         endpoint: /rest/v1/AlertSyslogTarget
@@ -35,145 +22,12 @@
         endpoint: /rest/v1/AlertSyslogTarget/{{ item.uuid }}
       loop: "{{ api_syslog_server_result.record }}"
 
-    # -----------------------------------------------------------
+    - name: Show desired syslog_server config
+      ansible.builtin.debug:
+        var: syslog_server_config
 
-    - name: Create new Syslog server - REQUIRED ONLY
-      scale_computing.hypercore.syslog_server:
-        host: "{{ create_syserver.host }}"
-        state: present
-      register: result
-    - scale_computing.hypercore.syslog_server_info:
-      register: info
-    - ansible.builtin.assert:
-        that:
-          - result.changed == True
-          - result.diff.before != result.diff.after
-    - ansible.builtin.assert: &test0
-        that:
-          - result.record != {}
-          - result.record.keys() | sort ==
-            [ 'alert_tag_uuid', 'host', 'latest_task_tag', 'port',
-            'protocol', 'resend_delay', 'silent_period', 'uuid' ]
-          - info.records|length == 1|int
-          - info.records[0].host == "{{ create_syserver.host }}"
-          - info.records[0].port == default_port
-          - info.records[0].protocol == "{{ udp_protocol }}"
-
-    - name: Create new Syslog server - REQUIRED ONLY - idempotence
-      scale_computing.hypercore.syslog_server:
-        host: "{{ create_syserver.host }}"
-        state: present
-      register: result
-    - scale_computing.hypercore.syslog_server_info:
-      register: info
-    - ansible.builtin.assert:
-        that:
-          - result.changed == False
-          - result.diff.before == result.diff.after
-    - ansible.builtin.assert: *test0
-
-    - name: Update Syslog server
-      scale_computing.hypercore.syslog_server: '{{ create_syserver | combine({"state": "present"}) }}'
-      register: result
-    - scale_computing.hypercore.syslog_server_info:
-      register: info
-    - ansible.builtin.assert:
-        that:
-          - result.changed == True
-          - result.diff.before != result.diff.after
-    - ansible.builtin.assert: &test1
-        that:
-          - result.record != {}
-          - result.record.keys() | sort ==
-            [ 'alert_tag_uuid', 'host', 'latest_task_tag', 'port',
-            'protocol', 'resend_delay', 'silent_period', 'uuid' ]
-          - info.records|length == 1|int
-          - info.records[0].host == "{{ create_syserver.host }}"
-          - info.records[0].port == create_syserver.port
-          - info.records[0].protocol == "{{ tcp_protocol }}"
-
-    - name: Update Syslog server - idempotence
-      scale_computing.hypercore.syslog_server: '{{ create_syserver | combine({"state": "present"}) }}'
-      register: result
-    - scale_computing.hypercore.syslog_server_info:
-      register: info
-    - ansible.builtin.assert:
-        that:
-          - result.changed == False
-          - result.diff.before == result.diff.after
-    - ansible.builtin.assert: *test1
-
-    - name: Update Syslog server - HOST ONLY
-      scale_computing.hypercore.syslog_server:
-        host: "{{ create_syserver.host }}"
-        host_new: "{{ new_host }}"
-        state: present
-      register: result
-    - scale_computing.hypercore.syslog_server_info:
-      register: info
-    - ansible.builtin.debug:
-        msg: "{{ result }}"
-    - ansible.builtin.assert:
-        that:
-          - result.changed == True
-          - result.diff.before != result.diff.after
-    - ansible.builtin.assert: &test2
-        that:
-          - result.record != {}
-          - result.record.keys() | sort ==
-            [ 'alert_tag_uuid', 'host', 'latest_task_tag', 'port',
-            'protocol', 'resend_delay', 'silent_period', 'uuid' ]
-          - info.records|length == 1|int
-          - info.records[0].host == "{{ new_host }}"
-          - info.records[0].port == create_syserver.port
-          - info.records[0].protocol == "{{ tcp_protocol }}"
-
-    - name: Update Syslog server - HOST ONLY - idempotence
-      scale_computing.hypercore.syslog_server:
-        host: "{{ create_syserver.host }}"
-        host_new: "{{ new_host }}"
-        state: present
-      register: result
-    - scale_computing.hypercore.syslog_server_info:
-      register: info
-    - ansible.builtin.assert:
-        that:
-          - result.changed == False
-          - result.diff.before == result.diff.after
-    - ansible.builtin.assert: *test2
-
-    - name: Delete Syslog server
-      scale_computing.hypercore.syslog_server:
-        host: "{{ new_host }}"
-        state: absent
-      register: result
-    - scale_computing.hypercore.syslog_server_info:
-      register: info
-    - ansible.builtin.assert:
-        that:
-          - result.changed == True
-          - result.diff.before != result.diff.after
-    - ansible.builtin.assert: &test3
-        that:
-          - info.records|length == 0|int
-          - result.records == {}
-
-    - name: Delete Syslog server - idempotence
-      scale_computing.hypercore.syslog_server:
-        host: "{{ new_host }}"
-        state: absent
-      register: result
-    - scale_computing.hypercore.syslog_server_info:
-      register: info
-    - ansible.builtin.assert:
-        that:
-          - result.changed == True
-          - result.diff.before != result.diff.after
-    - ansible.builtin.assert: *test3
-
-    # -----------------------------------------------------------
-
-# DEFAULTS:
-#  10.5.11.222
-#  514
-#  UDP
+    - name: Create configured syslog_server
+      scale_computing.hypercore.api:
+        action: post
+        endpoint: /rest/v1/AlertSyslogTarget
+        data: '{{ syslog_server_config }}'
