--- a/.github/workflows/integ-test.yml
+++ b/.github/workflows/integ-test.yml
@@ -103,6 +103,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        ansible: [2.13.0]
+        # python: [3.11]
         # test_name: [user_info]
         test_name: ${{ fromJson(needs.integ-matrix.outputs.matrix) }}
     steps:
@@ -112,7 +114,7 @@ jobs:
       - run: apt update
       - run: apt install -y git make
       - run: apt install -y genisoimage qemu-utils
-      - run: pip install ansible-core==2.13.1
+      - run: pip install ansible-core~=${{ matrix.ansible }}
       - run: mkdir -p $WORKDIR
       - run: cp -a ./  $WORKDIR
       - run: ansible-galaxy collection install community.crypto
@@ -126,7 +128,7 @@ jobs:
           echo "smb_password: ${{ secrets.CI_CONFIG_HC_IP50_SMB_PASSWORD }}" >> tests/integration/integration_config.yml
           echo "sc_replication_dest_password: ${{ secrets.CI_CONFIG_HC_IP50_SC_REPLICATION_DEST_PASSWORD }}" >> tests/integration/integration_config.yml
           ls -al tests/integration/integration_config.yml
-      - run: cd $WORKDIR && ansible-test integration ${{ matrix.test_name }}
+      - run: cd $WORKDIR && ansible-test integration --local ${{ matrix.test_name }}
 
   replica_cleanup:
     needs:
