Update role, add integration tests.

--- a/tests/integration/targets/version_update_single_node_role/tasks/main.yml
+++ b/tests/integration/targets/version_update_single_node_role/tasks/main.yml
@@ -5,12 +5,9 @@
     SC_PASSWORD: "{{ sc_password }}"
     SC_TIMEOUT: "{{ sc_timeout }}"
 
-# Quick debugging, then tests
   block:
-    - name: Get available updates
-      scale_computing.hypercore.api:
-        action: get
-        endpoint: /rest/v1/Update
-      register: available_updates
-    - ansible.builtin.debug:
-        var: available_updates
+    - name: Test role version_update_single_node
+      include_tasks: 01_update.yml
+
+    - name: Test role version_update_single_node - idempotence
+      include_tasks: 02_update_idempotence.yml
